--- a/test.html
+++ b/test.html
@@ -43,7 +43,51 @@
                 <div class="movie_item"><img src="template-movie.png" alt="movie jacket" onclick=""></div>
                 <div class="movie_item"><img src="template-movie.png" alt="movie jacket" onclick=""></div>
                 <div class="movie_item"><img src="template-movie.png" alt="movie jacket" onclick=""></div>
+
+        <h3>Catégorie 1</h3>
+            <div id="cat1" class="movies slider">
+              <div class="arrow left" onclick="moveRight('best')">&#8249;</div>
+              <div class="arrow right" onclick="moveLeft('best')">&#8250;</div>
+  
+  
+                <div class="slidercontent">
+                <div class="movie_item"><img src="template-movie.png" alt="movie jacket" onclick=""></div>
+                <div class="movie_item"><img src="template-movie.png" alt="movie jacket" onclick=""></div>
+                <div class="movie_item"><img src="template-movie.png" alt="movie jacket" onclick=""></div>
+                <div class="movie_item"><img src="template-movie.png" alt="movie jacket" onclick=""></div>
+                <div class="movie_item"><img src="template-movie.png" alt="movie jacket" onclick=""></div>
+                <div class="movie_item"><img src="template-movie.png" alt="movie jacket" onclick=""></div>
+                <div class="movie_item"><img src="template-movie.png" alt="movie jacket" onclick=""></div>
+        
+        <h3>Catégorie 2</h3>
+            <div id="cat2" class="movies slider">
+              <div class="arrow left" onclick="moveRight('best')">&#8249;</div>
+              <div class="arrow right" onclick="moveLeft('best')">&#8250;</div>
+  
+  
+                <div class="slidercontent">
+                <div class="movie_item"><img src="template-movie.png" alt="movie jacket" onclick=""></div>
+                <div class="movie_item"><img src="template-movie.png" alt="movie jacket" onclick=""></div>
+                <div class="movie_item"><img src="template-movie.png" alt="movie jacket" onclick=""></div>
+                <div class="movie_item"><img src="template-movie.png" alt="movie jacket" onclick=""></div>
+                <div class="movie_item"><img src="template-movie.png" alt="movie jacket" onclick=""></div>
+                <div class="movie_item"><img src="template-movie.png" alt="movie jacket" onclick=""></div>
+                <div class="movie_item"><img src="template-movie.png" alt="movie jacket" onclick=""></div>
            
+        <h3>Catégorie 3</h3>
+            <div id="cat3" class="movies slider">
+              <div class="arrow left" onclick="moveRight('best')">&#8249;</div>
+              <div class="arrow right" onclick="moveLeft('best')">&#8250;</div>
+  
+  
+                <div class="slidercontent">
+                <div class="movie_item"><img src="template-movie.png" alt="movie jacket" onclick=""></div>
+                <div class="movie_item"><img src="template-movie.png" alt="movie jacket" onclick=""></div>
+                <div class="movie_item"><img src="template-movie.png" alt="movie jacket" onclick=""></div>
+                <div class="movie_item"><img src="template-movie.png" alt="movie jacket" onclick=""></div>
+                <div class="movie_item"><img src="template-movie.png" alt="movie jacket" onclick=""></div>
+                <div class="movie_item"><img src="template-movie.png" alt="movie jacket" onclick=""></div>
+                <div class="movie_item"><img src="template-movie.png" alt="movie jacket" onclick=""></div>
         <script> src="test.js"</script>
  
         </div>
